# GR00T-N1.5-G1

./: .gitignore  README.md  VISUALIZATION_README.md  test_direct_control.py  test_joint_control.py  test_simple_control.py  test_visualization.py  test_websocket_client.py
Isaac-GR00T/: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  GR00T_FINETUNE_FIXES.md  Makefile  README.md  convert_AV1.py  finetun_cmd_g1  metadata_newembodiment.json  orin.Dockerfile  out.ogv  pyproject.toml  test_comunication.py  thor.Dockerfile
Isaac-GR00T/deployment_scripts/: README.md  action_head_utils.py  build_engine.sh  export_onnx.py  gr00t_inference.py  setup_env.sh  trt_model_forward.py  trt_torch.py
Isaac-GR00T/getting_started/: 0_load_dataset.ipynb  1_gr00t_inference.ipynb  2_finetuning.ipynb  3_0_new_embodiment_finetuning.md  5_policy_deployment.md  (+3 more)
doc/: vision pro 遥操作bug说明.odt  vision_pro_遥操作说明.md  关节核对说明.odt  数据集训练.odt
g1_xr_teleoperate/xr_teleoperate/teleop/robot_control/dex-retargeting/: LICENSE  README.md  hand_retargeting.py  pyproject.toml
g1_xr_teleoperate/xr_teleoperate/teleop/robot_control/dex-retargeting/src/dex_retargeting/: __init__.py  optimizer.py  retargeting_config.py
g1_xr_teleoperate/xr_teleoperate/teleop/televuer/: .gitignore  LICENSE  README.md  pyproject.toml  rootCA.key  rootCA.srl  server.csr  server_ext.cnf
g1_xr_teleoperate/xr_teleoperate/teleop/televuer/src/televuer/: __init__.py  televuer.py  tv_wrapper.py
g1_xr_teleoperate/xr_teleoperate/teleop/televuer/test/: _test_televuer.py  _test_tv_wrapper.py  test_televuer.py  test_tv_wrapper.py
(+250 files in other folders)
