[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dex_retargeting"
version = "0.4.7"
description = "Hand pose retargeting for dexterous robot hand. Modified by [silencht@qq.com]"
authors = [
    { name = "Yuzhe Qin", email = "y1qin@ucsd.edu" }
]
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/dexsuite/dex-retargeting" }

dependencies = [
    "numpy<2.0.0",
    "torch==2.3.0",
    "pytransform3d>=3.5.0",
    "pin>=2.7.0",
    "nlopt>=2.6.1,<2.8.0",
    "trimesh>=4.4.0",
    "anytree>=2.12.0",
    "pyyaml>=6.0.0",
    "lxml>=5.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
